Fix horizontal scroll on mobile caused by image width bigger than viewport

--- a/sass/core/_adaptive.scss
+++ b/sass/core/_adaptive.scss
@@ -5,7 +5,7 @@ video,
 svg,
 select,
 textarea {
-  max-width: 100%;
+  max-width: 100vw;
 }
 .overflow-container {
   overflow-x: scroll;
